[gd_scene load_steps=16 format=3 uid="uid://ch5qa4sj66vf7"]

[ext_resource type="Script" uid="uid://vmaybmg4gidj" path="res://UI/main_menu.gd" id="1_p8ccj"]
[ext_resource type="Texture2D" uid="uid://p5ss1eg03uuv" path="res://Assets/close.png" id="2_tk8dj"]
[ext_resource type="Texture2D" uid="uid://b5t47uvt3qlgr" path="res://Assets/open-folder.png" id="3_d8nwk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8ccj"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0.85882354)
border_width_right = 3
border_color = Color(0.29411766, 0.29411766, 0.29411766, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk8dj"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.4862745, 0.18431373, 0.14509805, 0.9764706)
border_width_right = 3
border_color = Color(0.5792044, 0.22594947, 0.18121871, 0.9764706)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8nwk"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(0.3180199, 0.31801975, 0.31801975, 0.5058824)
border_width_right = 3
border_color = Color(0.49354547, 0.4935456, 0.4935453, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.096204735, 0.09620475, 0.096204735, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4cwpn"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.28235295, 0.28235295, 0.28235295, 0.90588236)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color(0.19076231, 0.19076234, 0.19076225, 0.6)
shadow_size = 3
shadow_offset = Vector2(1.17, 0.69)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f40uw"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.47843137, 0.18431373, 0.14509805, 0.90588236)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color(0.19215687, 0.19215687, 0.19215687, 0.6)
shadow_size = 3
shadow_offset = Vector2(1.17, 0.69)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ctay"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 3
border_blend = true

[sub_resource type="InputEventKey" id="InputEventKey_d8nwk"]
device = -1
shift_pressed = true
ctrl_pressed = true
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_4cwpn"]
events = [SubResource("InputEventKey_d8nwk")]

[sub_resource type="InputEventKey" id="InputEventKey_4cwpn"]
device = -1
ctrl_pressed = true
keycode = 76

[sub_resource type="Shortcut" id="Shortcut_f40uw"]
events = [SubResource("InputEventKey_4cwpn")]

[sub_resource type="InputEventKey" id="InputEventKey_8ctay"]
device = -1
ctrl_pressed = true
keycode = 83

[sub_resource type="Shortcut" id="Shortcut_ev3b6"]
events = [SubResource("InputEventKey_8ctay")]

[node name="MainMenu" type="Panel"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 500.0
offset_bottom = 221.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p8ccj")
script = ExtResource("1_p8ccj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tk8dj")

[node name="Label" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_left = 18.0
offset_top = 2.0
offset_right = 253.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel2" type="Panel" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -15.5
offset_right = 39.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/Panel2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Exit"

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 25
theme_override_icons/icon = ExtResource("2_tk8dj")
theme_override_styles/normal = SubResource("StyleBoxFlat_4cwpn")
theme_override_styles/hover = SubResource("StyleBoxFlat_f40uw")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_constants/separation = 5

[node name="Panel3" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ctay")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel3"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 440.0
offset_bottom = 46.0
theme_override_constants/separation = 139

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "General"

[node name="Panel" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0
theme_override_constants/separation = 139

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_default_cursor_shape = 15
max_value = 1.0
step = 0.01
value = 1.0

[node name="Panel7" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel7"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel7/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Clear graph"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel7/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel7/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 29
theme_override_font_sizes/font_size = 17
shortcut = SubResource("Shortcut_4cwpn")
text = "Clear"
alignment = 0
icon_alignment = 2

[node name="Panel2" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel2"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Load file"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 29
theme_override_font_sizes/font_size = 17
shortcut = SubResource("Shortcut_f40uw")
text = "File"
icon = ExtResource("3_d8nwk")
alignment = 0
icon_alignment = 2

[node name="Panel6" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel6"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel6/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Save file"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel6/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel6/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 29
theme_override_font_sizes/font_size = 17
shortcut = SubResource("Shortcut_ev3b6")
text = "Save"
alignment = 0
icon_alignment = 2

[node name="Panel4" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ctay")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel4"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 440.0
offset_bottom = 46.0
theme_override_constants/separation = 139

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Stats"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Neurons"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Inputs"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Weights"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Rate detectors"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0"

[node name="Panel5" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ctay")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel5"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 440.0
offset_bottom = 46.0
theme_override_constants/separation = 139

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Panel5/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Neuron settings"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Not selected"

[node name="Title" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Title"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Title/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Title"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Title/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Title/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Capacitance" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Capacitance"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Capacitance/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Capacitance"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Capacitance/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Capacitance/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Capacitance/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "mF"

[node name="Threshold" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Threshold"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Threshold/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Threshold"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Threshold/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Threshold/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Threshold/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "V"

[node name="Drain" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Drain"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Drain/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Drain"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Drain/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Drain/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Drain/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Î©"

[node name="Input" type="Panel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d8nwk")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/Input"]
layout_mode = 0
offset_left = 14.0
offset_top = 9.0
offset_right = 441.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Input/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Input"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer/Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/Input/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/Input/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "mA"

[node name="LoadFileDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
access = 2
use_native_dialog = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
oversampling_override = 1.0
access = 2
use_native_dialog = true

[node name="ConfirmLoadDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
title = "Load File"
size = Vector2i(365, 106)
unresizable = true
unfocusable = true
popup_wm_hint = true
dialog_text = "Loading a file will discard your current graph.
Do you want to continue?"

[connection signal="pressed" from="VBoxContainer/MarginContainer/Panel2/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/Panel/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/Panel7/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/Panel2/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/Panel6/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="text_submitted" from="VBoxContainer/ScrollContainer/VBoxContainer/Title/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted_title"]
[connection signal="text_submitted" from="VBoxContainer/ScrollContainer/VBoxContainer/Capacitance/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/ScrollContainer/VBoxContainer/Threshold/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted_treshold"]
[connection signal="text_submitted" from="VBoxContainer/ScrollContainer/VBoxContainer/Drain/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted_drain"]
[connection signal="text_submitted" from="VBoxContainer/ScrollContainer/VBoxContainer/Input/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted_input"]
[connection signal="file_selected" from="LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="confirmed" from="ConfirmLoadDialog" to="." method="_on_confirm_load_dialog_confirmed"]
